--- a/net.bobbo.dev-console/Runtime/bobbo.dev-console.asmdef
+++ b/net.bobbo.dev-console/Runtime/bobbo.dev-console.asmdef
@@ -2,6 +2,7 @@
     "name": "BobboNet.DevConsole",
     "references": [
         "Zenject",
+        "Unity.InputSystem",
         "Unity.TextMeshPro"
     ],
     "includePlatforms": [],
@@ -11,6 +12,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.inputsystem",
+            "expression": "1.2",
+            "define": "HAS_NEW_INPUT_SYSTEM"
+        }
+    ],
     "noEngineReferences": false
 }
