Knowledge implemented as scriptable object

--- a/net.bobbo.global-knowledge/Runtime/bobbo.global-knowledge.asmdef
+++ b/net.bobbo.global-knowledge/Runtime/bobbo.global-knowledge.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "BobboNet.GlobalKnowledge",
     "references": [
-        "BobboNet.JSONData"
+        "BobboNet.JSONData",
+        "NaughtyAttributes.Core"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
