--- a/net.bobbo.global-knowledge/package.json
+++ b/net.bobbo.global-knowledge/package.json
@@ -7,6 +7,7 @@
     "url": "https://bobbo.net"
   },
   "dependencies": {
+    "com.dbrizov.naughtyattributes": "2.0.0",
     "net.bobbo.editor.search-window": "0.1.0",
     "net.bobbo.json-data": "0.1.0"
   }
